' Generated by UML Generator
' Encoded: jLXBSzis4BxhLt1oegF7vD1UD8adjkEqdiPvsEwaCvrE1m9N4YeGO41Gjff6lxqBy0M2eEmapaaYiDZziFljWtoPQw9qaV9Hlc4Y8uga4UKapq-qLcnHQBYWKbopVo5wDbgp12BA5EKm6bcfw0e8VoirMp9AD9FYNAoOY3wFecZy6LLhHhz4AM4Y9cgLpwDhL2fMV_vrD8-saYMZBxKULqTvd2Mrk7agSb0NdPMyMFm3LBjB2vdit6Uw9a80DtP1FpyhduxjZWAY8Jd1uroMmdYtD9CQ1Dtz1gwQwTHikm3Z5jiawYARH1wkIUIYcaHXJ9CeRFx8cDQoV8YF6bHVMlz_AY3NfSiUsKdtUAGo7VzW1mGfSWLKgkI1H44Qmhnp_DeiEPUtpuZeJ0fQA0L2NvAinZQ9pXofu-X59E3M4VsLv6iZVXpRQ16jyI8QjPrecJ9w8JIiG5N7EclniwFx_Rplt_im_mQkE-JXeOWOQ7l2UVMSlmBEjg0WCJHSICc1Y3OuhejiMFO6Hs5yskuKkTNPE8W9RHPGWJvNIghUrLsjSL2XmuyRHKJEC23dTnIoff3i--jncg_S30k987zlrahUaWK7nyXxK2aHVIFzzQwHLe6IMmo4kZ6nK4JjV4M3-t5wGDqWhi5zJnt60jIIKF3oB9EbeYKJoUdkeaEXUECawZnwP_KI_hpFs6FB2BA5M06T1rAvRWYE9OVbHw4ZHfRb5HjQTWf7qCsBYkKDVnmMewAKgCttgAh1EtfU4yQ_Giaa0ZS779t190ohxLwgo19Cd39xXc0CbOjUXxuGbv1AjGlIOvgIp2-VjOK06-wfeLEdKbs81Ew6L9U_zwgpxUhx2Jn-6877Nq7WyMCHUFn811x_00AFlvN0uqSby7i5IxGiAEJNeBQCLerAGIxv5cg4lNb6bNCE95v_z0QcniwfaXiikCM2itoDZT_cHqxNa1GSZ7kglydv7T12IrMZUH7LA_aC-Tp8OHy2ahn7jyG_MJuZdWAlVCebnQ5zzS4yFZyNM-0o0yFKQS8_pQCtBDVjCge_avpZP8OUocVvJb3iRm8d-yG8ndOwKOhix37C76lgLggD0UswzwDTQvgqTz_uCBf9DApIzkAiL1IBheHJ3sr02lZ8z1hfH7Q-w2HApF8buwYe7F0dM23kz4avUTZ1u_lqEQTp4CcDVFNcG_zO84FcKTE0NHthGYVoLiGzqjP-Awdgva3Nc3DOrNDL6PrQGH-TA-wD05UOFszOodH5txrMknFwgM0AUkbne2orenaoH9mMT0FbcygUaenGfdVD38YvYUurSx7Q4kwwkjsrMjgnKLUFYKJ6G3r8NbdHvcZf1CT-t35jijjJNI_LMERHgqAL5AmyWNqcBrA8ExLgMfrQlWL8oY4vt3zztnvgdGxkXpMvRuvJ6_jg-oGXMHD-m_6lUy_hNR-hzZMXMEPsfGCWnKPpnityZUdHFlYl0TspiUd3ZhIDpie4sBrYzwYJL-QWUySfFG30bOu3WlOrxZ6SXCp2a7HnUN5hlT8HTg_zI6YS2peqiD7wLfM_8w1sQ6o-41cSc7tXqGvNPt8PFo4Sc-IJILJ-UGbt9CqupAXCpU92BgeVV-SNW8tvNU6lloVaD9UK4Lu-bFyxGarkxHkqI3Bh6i-zWQyp_HPNNfnqc3mF9qTPL38vxxsHsPssZCpTUctsiheNp_rXnEnUdlpnzzNvpTN5-RKjUEZYduCV6qh4yOF0cgePWehh0q0dqJ1Ccyje9k7tzQscXqufuRJWgF-Kq8rSBcDFpZQ4O6GmaRGoer4LdM6d7tPiXYq0MToVCuFURQt6GwuRDeTxGyQQxEzyiSGPPrv_B7IoCl1DJKwddQyvezuBtsns77gR6Nn1dCt-E-wxSr3S00YezyTg8rOFDxtDfvwEQcJrnVoRZ9fnorSm2hLlUp4tzq921gVJnqVXHcZikPqdB6NmUXsjqyWie4C2FJFTXXCw7wXXJrkAU2LhGBWN_04vrvS38dxU1SHwKHr8zdkHURA7J7kYWHem86t0LdavUebPMwJyVm
' URL: http://www.plantuml.com/plantuml/uml/jLXBSzis4BxhLt1oegF7vD1UD8adjkEqdiPvsEwaCvrE1m9N4YeGO41Gjff6lxqBy0M2eEmapaaYiDZziFljWtoPQw9qaV9Hlc4Y8uga4UKapq-qLcnHQBYWKbopVo5wDbgp12BA5EKm6bcfw0e8VoirMp9AD9FYNAoOY3wFecZy6LLhHhz4AM4Y9cgLpwDhL2fMV_vrD8-saYMZBxKULqTvd2Mrk7agSb0NdPMyMFm3LBjB2vdit6Uw9a80DtP1FpyhduxjZWAY8Jd1uroMmdYtD9CQ1Dtz1gwQwTHikm3Z5jiawYARH1wkIUIYcaHXJ9CeRFx8cDQoV8YF6bHVMlz_AY3NfSiUsKdtUAGo7VzW1mGfSWLKgkI1H44Qmhnp_DeiEPUtpuZeJ0fQA0L2NvAinZQ9pXofu-X59E3M4VsLv6iZVXpRQ16jyI8QjPrecJ9w8JIiG5N7EclniwFx_Rplt_im_mQkE-JXeOWOQ7l2UVMSlmBEjg0WCJHSICc1Y3OuhejiMFO6Hs5yskuKkTNPE8W9RHPGWJvNIghUrLsjSL2XmuyRHKJEC23dTnIoff3i--jncg_S30k987zlrahUaWK7nyXxK2aHVIFzzQwHLe6IMmo4kZ6nK4JjV4M3-t5wGDqWhi5zJnt60jIIKF3oB9EbeYKJoUdkeaEXUECawZnwP_KI_hpFs6FB2BA5M06T1rAvRWYE9OVbHw4ZHfRb5HjQTWf7qCsBYkKDVnmMewAKgCttgAh1EtfU4yQ_Giaa0ZS779t190ohxLwgo19Cd39xXc0CbOjUXxuGbv1AjGlIOvgIp2-VjOK06-wfeLEdKbs81Ew6L9U_zwgpxUhx2Jn-6877Nq7WyMCHUFn811x_00AFlvN0uqSby7i5IxGiAEJNeBQCLerAGIxv5cg4lNb6bNCE95v_z0QcniwfaXiikCM2itoDZT_cHqxNa1GSZ7kglydv7T12IrMZUH7LA_aC-Tp8OHy2ahn7jyG_MJuZdWAlVCebnQ5zzS4yFZyNM-0o0yFKQS8_pQCtBDVjCge_avpZP8OUocVvJb3iRm8d-yG8ndOwKOhix37C76lgLggD0UswzwDTQvgqTz_uCBf9DApIzkAiL1IBheHJ3sr02lZ8z1hfH7Q-w2HApF8buwYe7F0dM23kz4avUTZ1u_lqEQTp4CcDVFNcG_zO84FcKTE0NHthGYVoLiGzqjP-Awdgva3Nc3DOrNDL6PrQGH-TA-wD05UOFszOodH5txrMknFwgM0AUkbne2orenaoH9mMT0FbcygUaenGfdVD38YvYUurSx7Q4kwwkjsrMjgnKLUFYKJ6G3r8NbdHvcZf1CT-t35jijjJNI_LMERHgqAL5AmyWNqcBrA8ExLgMfrQlWL8oY4vt3zztnvgdGxkXpMvRuvJ6_jg-oGXMHD-m_6lUy_hNR-hzZMXMEPsfGCWnKPpnityZUdHFlYl0TspiUd3ZhIDpie4sBrYzwYJL-QWUySfFG30bOu3WlOrxZ6SXCp2a7HnUN5hlT8HTg_zI6YS2peqiD7wLfM_8w1sQ6o-41cSc7tXqGvNPt8PFo4Sc-IJILJ-UGbt9CqupAXCpU92BgeVV-SNW8tvNU6lloVaD9UK4Lu-bFyxGarkxHkqI3Bh6i-zWQyp_HPNNfnqc3mF9qTPL38vxxsHsPssZCpTUctsiheNp_rXnEnUdlpnzzNvpTN5-RKjUEZYduCV6qh4yOF0cgePWehh0q0dqJ1Ccyje9k7tzQscXqufuRJWgF-Kq8rSBcDFpZQ4O6GmaRGoer4LdM6d7tPiXYq0MToVCuFURQt6GwuRDeTxGyQQxEzyiSGPPrv_B7IoCl1DJKwddQyvezuBtsns77gR6Nn1dCt-E-wxSr3S00YezyTg8rOFDxtDfvwEQcJrnVoRZ9fnorSm2hLlUp4tzq921gVJnqVXHcZikPqdB6NmUXsjqyWie4C2FJFTXXCw7wXXJrkAU2LhGBWN_04vrvS38dxU1SHwKHr8zdkHURA7J7kYWHem86t0LdavUebPMwJyVm
' Generated on: 2025-12-04T12:49:06.945192817

@startuml
skinparam classAttributeIconSize 0
hide circle

class RealNotificationEngin {
  +{static} main(args: String[]): void
}

class Notification {
  +id: String
  +userId: String
  +subject: String
  +body: String
  +channels: Set<Channel>
  +createdAt: long
  +idempotencyKey: String
  --
  +Notification(id: String, userId: String, subject: String, body: String, channels: Set<Channel>, idempotencyKey: String)
  +toString(): String
}

class Request {
  +userId: String
  +subject: String
  +body: String
  +channels: Set<Channel>
  +idempotencyKey: String
  --
  +Request(userId: String, subject: String, body: String, channels: Set<Channel>, idempotencyKey: String)
}

class NotificationRecord {
  +id: String
  +userId: String
  +state: NotificationState
  +channelStates: ConcurrentMap<Channel, ChannelState> = new ConcurrentHashMap<>()
  +attempts: AtomicInteger = new AtomicInteger(0)
  +idempotencyKey: String
  --
  ~NotificationRecord(id: String, userId: String, state: NotificationState, idempotencyKey: String, channels: Set<Channel>)
  ~allChannelsDelivered(): boolean
}

class ChannelState {
  ~status: ChannelStatus
  ~attempts: int
  ~lastError: String
  --
  ~ChannelState(status: ChannelStatus)
}

class TransientException {
  ~TransientException(msg: String)
  ~TransientException(t: Throwable)
}

class PermanentException {
  ~PermanentException(msg: String)
}

class ProviderTemporaryException {
  ~ProviderTemporaryException(m: String)
}

class ProviderPermanentException {
  ~ProviderPermanentException(m: String)
}

interface NotificationRepo {
  ~findByIdempotencyKey(key: String): Optional<NotificationRecord>
  ~save(rec: NotificationRecord): void
  ~findById(id: String): NotificationRecord
  ~isChannelDelivered(notificationId: String, channel: Channel): boolean
  ~markChannelDelivered(notificationId: String, channel: Channel): void
  ~markChannelFailed(notificationId: String, channel: Channel, error: String): void
  ~allChannelsDelivered(notificationId: String): boolean
  ~updateState(notificationId: String, state: NotificationState): void
}

class InMemoryNotificationRepo {
  -map: ConcurrentMap<String, NotificationRecord> = new ConcurrentHashMap<>()
  -idempotencyIndex: ConcurrentMap<String, String> = new ConcurrentHashMap<>()
  --
  +findByIdempotencyKey(key: String): Optional<NotificationRecord>
  +save(rec: NotificationRecord): void
  +findById(id: String): NotificationRecord
  +isChannelDelivered(notificationId: String, channel: Channel): boolean
  +markChannelDelivered(notificationId: String, channel: Channel): void
  +markChannelFailed(notificationId: String, channel: Channel, error: String): void
  +allChannelsDelivered(notificationId: String): boolean
  +updateState(notificationId: String, state: NotificationState): void
}

class PreferencesService {
  ~resolveChannels(userId: String, requested: Set<Channel>): Set<Channel>
}

class BrokerPublisher {
  -scheduler: ScheduledExecutorService = Executors.newScheduledThreadPool(4)
  -queue: BlockingQueue<Envelope>
  -dlq: List<Envelope> = Collections.synchronizedList(new ArrayList<>())
  -worker: NotificationWorker
  --
  ~BrokerPublisher(queue: BlockingQueue<Envelope>, worker: NotificationWorker)
  ~publish(n: Notification): void
  ~requeueWithDelay(n: Notification, delayMillis: long, nextAttempt: int): void
  ~requeueWithDelay(n: Notification, delayMillis: long): void
  ~sendToDLQ(n: Notification, channel: Channel, e: Exception): void
  ~shutdown(): void
}

class Envelope {
  ~notification: Notification
  ~attempt: int
  --
  ~Envelope(n: Notification, attempt: int)
}

interface RateLimiter {
  ~tryAcquire(userId: String, channel: Channel): boolean
}

class TokenBucket {
  ~capacity: int
  ~refillIntervalMillis: long
  ~refillTokens: int
  ~tokens: double
  ~lastRefill: long
  --
  ~TokenBucket(capacity: int, refillTokens: int, refillInterval: Duration)
  ~tryConsume(): boolean
  -refillIfNeeded(): void
}

class InMemoryRateLimiter {
  -map: ConcurrentMap<String, TokenBucket> = new ConcurrentHashMap<>()
  --
  +tryAcquire(userId: String, channel: Channel): boolean
}

interface ChannelAdapter {
  ~send(userId: String, subject: String, body: String): void
}

class ChannelAdapterFactory {
  -emailClient: EmailClient
  --
  ~ChannelAdapterFactory(ec: EmailClient)
  ~get(c: Channel): ChannelAdapter
}

class EmailAdapter {
  -client: EmailClient
  --
  ~EmailAdapter(client: EmailClient)
  +send(userId: String, subject: String, body: String): void
}

class ConsoleAdapter {
  -channel: Channel
  --
  ~ConsoleAdapter(c: Channel)
  +send(userId: String, subject: String, body: String): void
}

class EmailClient {
  ~send(email: String, subject: String, body: String): void
}

class UserRepo {
  -{static} users: Map<String, String> = Map.of("alice", "alice@example.com", "bob", "bob@example.com", "Geek", "geek@example.com", "no-social", "nosocial@example.com")
  --
  ~{static} getEmail(userId: String): String
}

class NotificationWorker {
  -adapterFactory: ChannelAdapterFactory
  -repo: NotificationRepo
  -rateLimiter: RateLimiter
  -publisher: BrokerPublisher
  -MAX_RETRIES: int = 5
  --
  ~NotificationWorker(adapterFactory: ChannelAdapterFactory, repo: NotificationRepo, rateLimiter: RateLimiter, publisher: BrokerPublisher)
  ~handle(n: Notification, attempt: int): void
  -calculateBackoff(attempt: int): long
}

class NotificationController {
  -repo: NotificationRepo
  -publisher: BrokerPublisher
  -prefs: PreferencesService
  --
  ~NotificationController(repo: NotificationRepo, publisher: BrokerPublisher, prefs: PreferencesService)
  +sendNotification(req: Request): void
}

NotificationRecord o-- ChannelState
NotificationRepo ..> NotificationRecord
InMemoryNotificationRepo ..|> NotificationRepo
InMemoryNotificationRepo o-- NotificationRecord
BrokerPublisher o-- Envelope
BrokerPublisher *-- NotificationWorker
BrokerPublisher ..> Notification
Envelope *-- Notification
InMemoryRateLimiter ..|> RateLimiter
InMemoryRateLimiter o-- TokenBucket
ChannelAdapterFactory *-- EmailClient
ChannelAdapterFactory ..> ChannelAdapter
EmailAdapter ..|> ChannelAdapter
EmailAdapter *-- EmailClient
ConsoleAdapter ..|> ChannelAdapter
NotificationWorker *-- ChannelAdapterFactory
NotificationWorker *-- NotificationRepo
NotificationWorker *-- RateLimiter
NotificationWorker *-- BrokerPublisher
NotificationWorker ..> Notification
NotificationController *-- NotificationRepo
NotificationController *-- BrokerPublisher
NotificationController *-- PreferencesService
NotificationController ..> Request
@enduml